# xprintidle

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  configure  configure.ac  meson.build  xprintidle.1  xprintidle.c
.github/workflows/: main.yml
test/: meson.build
test/src/: meson.build
